--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.5",
+    "react-redux": "^7.0.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
