--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.16.5",
     "axios": "^0.18.0",
+    "babel-plugin-import": "^1.11.0",
     "bootstrap": "^4.3.1",
+    "customize-cra": "^0.2.12",
+    "http-proxy-middleware": "^0.19.1",
     "json-server": "^0.14.2",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "react": "^16.8.5",
+    "react-app-rewired": "^2.1.3",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.5",
     "react-redux": "^7.0.2",
@@ -18,11 +25,13 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
+  "proxy":"http://localhost:5548",
+  
   "eslintConfig": {
     "extends": "react-app"
   },
